[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-docker"
version = "0.0.2"
authors = [
  { name="Vincent Simonin", email="vincent@saashup.com" },
]
description = "Manage Docker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["netbox", "netbox-plugin", "docker"]

[project.urls]
"Homepage" = "https://github.com/fanshan/netbox-plugin-docker"
"Bug Tracker" = "https://github.com/fanshan/netbox-plugin-docker/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_docker*"]
