[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-docker-plugin"
version = "3.0.1"
authors = [
  { name="Vincent Simonin", email="vincent@saashup.com" },
  { name="David Delassus", email="david.jose.delassus@gmail.com" }
]
description = "Manage Docker with Netbox & style."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["netbox", "netbox-plugin", "docker"]

[project.urls]
"Homepage" = "https://github.com/SaaShup/netbox-docker-plugin"
"Bug Tracker" = "https://github.com/SaaShup/netbox-docker-plugin/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_docker_plugin*"]
